digits-eks/eks-msk/shared-services/ingress/eks-msk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    nginx.ingress.kubernetes.io/rewrite-target: /
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
spec:
  rules:
  - host: "triage.cbioportal.aws.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: eks-triage
            port:
              number: 80
  - host: "triage.cbioportal.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: eks-triage
            port:
              number: 80
  - host: "beta.cbioportal.aws.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: eks-msk
            port:
              number: 80
  - host: "beta.cbioportal.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: eks-msk
            port:
              number: 80
  - host: "keycloak.cbioportal.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cbioportal-keycloak-http
            port:
              number: 80
  - host: "keycloak.cbioportal.aws.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cbioportal-keycloak-http
            port:
              number: 80
  - host: "session-service.cbioportal.aws.mskcc.org"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: cbioportal-session-service
            port:
              number: 80
#  - host: "eks-prod-keycloak.cbioportal.org"
#    http:
#      paths:
#      - path: "/"
#        pathType: Prefix
#        backend:
#          service:
#            name: eks-keycloak-http
#            port:
              number: 80
